2024-12-27 Francois Suter (Idéative)  <typo3@ideative.ch>

    * Add a delete reaction, resolves #361

2024-11-24 Francois Suter (Idéative)  <typo3@ideative.ch>

    * Improve passing properly structured data to DatamapPostprocessEvent, references #355
    * Release version 7.2.9

2024-11-22 Francois Suter (Idéative)  <typo3@ideative.ch>

    * Pass properly structured data to DatamapPostprocessEvent, resolves #355
    * Fix cross-linking and documentation configuration, resolves #356
    * Release version 7.2.8

2024-11-04 Francois Suter (Idéative)  <typo3@ideative.ch>

    * Use Core method for formatting TCE log messages, resolves #353, references #352
    * Release version 7.2.7

2024-10-16 Francois Suter (Idéative)  <typo3@ideative.ch>

    * Allow for unknown number of markers in TCE log messages, resolves #352

2024-10-14 Francois Suter (Idéative)  <typo3@ideative.ch>

    * Properly output warnings from Reaction import (thanks to Mathias Brodala)

2024-10-07 Francois Suter (Idéative)  <typo3@ideative.ch>

    * Allow saving empty value for override storage pid in Scheduler task, resolves #346
    * Allow restricted Reaction without table/index in payload (thanks to Mathias Brodala)
    * Release version 7.2.6

2024-05-23 Francois Suter (Idéative)  <typo3@ideative.ch>

    * Improve compatibility with both TYPO3 11 and 12, resolves #298
    * Ensure compatibility with PHP 8.3, resolves #324
    * Release version 7.2.5

2024-03-12 Francois Suter (Idéative)  <typo3@ideative.ch>

    * Ensure casting to boolean when checking nullable, resolves #319
    * Switch to PHP-based documentation rendering (thanks to Lina Wolf)
    * Release version 7.2.4

2024-02-19 Francois Suter (Idéative)  <typo3@ideative.ch>

    * Fix regression in backend module access for TYPO3 11, resolves #315
    * Release version 7.2.3

2024-02-06 Francois Suter (Idéative)  <typo3@ideative.ch>

    * Fix handling of disabled operations properties, resolves #312
    * Release version 7.2.2
