@@ -1,6 +1,7 @@
 2024-12-27 Francois Suter (Idéative)  <typo3@ideative.ch>
 
     * Add a delete reaction, resolves #361
+    * Avoid accessing substructure when not of the expected type, resolves #360
 
 2024-11-24 Francois Suter (Idéative)  <typo3@ideative.ch>
 
